# inversion_optimisation

./: .gitignore  README.md  arms_analysis.py  bias_table.py  check_think.py  compare_floor.py  compare_jfloor.py  gen_bias3_launch.py  gen_bias_launch.py  gen_tf_launch.py  gen_w2s_a1push.py  gen_w2s_beta.py  gen_w2s_launch.py  geo_score.py  map_tuned.py  patch_crossscore.py  patch_neguser.py  patch_tokbias.py  patch_tokbias2.py  pyproject.toml
data/: token_frequencies_hate_speech.pkl  token_frequencies_ultrachat.pkl
experiments/bloom/: EXPERIMENT_PROCEDURE.md  PROJECT_STATUS.md  RESULTS_abliterated_jail_vs_self_0712.md  audit_floor.py  backfill_token_stats.py  beta_family_floor_plot.py  beta_family_plot.py  bloom.py  bloom_beast.py  bloom_beast_1t3r_short.py  bloom_beast_b.py  bloom_beast_bon.py  bloom_beast_input_sweep.py  bloom_beast_logitdiff.py  bloom_beast_logitdiff_alt.py  bloom_beast_logitdiff_b025.py  bloom_beast_logitdiff_b05.py  bloom_beast_logitdiff_b1.py  bloom_beast_logitdiff_b15.py  bloom_beast_logitdiff_b1_alt.py  bloom_beast_logitdiff_b1_suf20.py  bloom_beast_logitdiff_b2.py  bloom_beast_logitdiff_b2_suf10.py  bloom_beast_logitdiff_b3.py  bloom_beast_logitdiff_b3_suf20.py  bloom_beast_logitdiff_pre100.py  bloom_beast_logitdiff_pre20.py  bloom_beast_logitdiff_pre50.py  bloom_beast_logitdiff_suf20.py  bloom_beast_logitdiff_suf50.py  bloom_beast_logitdiff_ta_first.py  bloom_beast_logitdiff_ta_hilow.py  bloom_beast_logitdiff_ta_lowhi.py  bloom_beast_logitdiff_ta_sched.py  bloom_beast_output.py  bloom_beast_output2.py  bloom_beast_output3.py  bloom_beast_output_b2_loss.py  bloom_beast_th0.py  bloom_beast_tree.py  (+124 more)
experiments/elicit_beast_flrt/: ExperimentBeast.py  ExperimentFLRT.ipynb  ExperimentFLRT.py
experiments/elicit_diffusion/: Experiment.ipynb  ExperimentDataset.ipynb  ExperimentInstruction.ipynb
experiments/elicit_soda/: ExperimentFluency.ipynb
notebooks/: Analysis.ipynb  InversionAlgortihms copy.ipynb  InversionAlgortihms.ipynb  InversionDatasets.ipynb  InversionExperiment.ipynb
notebooks/Experimental/: Experiment.ipynb
notebooks/experimental/: Experiment.ipynb  ExperimentBruteForce.ipynb  ExperimentElicit.ipynb  ExperimentPSO.ipynb  IMPROVEMENTS_SUGGESTIONS.md
notebooks/experimental_beast_flrt/: Experiment.ipynb  Experiment.py  ExperimentBeast.ipynb  ExperimentBeast.py  ExperimentFLRT copy.ipynb  ExperimentFLRT.ipynb  ExperimentFLRT.py  ExperimentFLRT2.py
notebooks/experimental_elicit/: Experiment.ipynb  (+5 more)
paper/: main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
(+125098 files in other folders)
