[project]
name = "inversion-optimisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0",
    "fancy-einsum>=0.0.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "openai>=2.9.0",
    "plotly>=6.5.0",
    "sentence-transformers>=5.2.2",
    "transformer-lens",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
