[project]
name = "inversion-optimisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0",
    "fancy-einsum>=0.0.3",
    "ipykernel>=7.1.0",
    "litellm>=1.83.7",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "openai>=2.9.0",
    "peft>=0.13.0",
    "plotly>=6.5.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.2",
    "tenacity>=9.1.4",
    "transformer-lens",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
