[project]
name = "inversion-optimisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets==3.6.0",
    "hf-transfer>=0.1.9",
    "ipykernel>=7.1.0",
    "litellm>=1.83.7",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "openai>=2.9.0",
    "peft>=0.13.0",
    "plotly>=6.5.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.2",
    "tenacity>=9.1.4",
    # transformers 5.13 has the Gemma-4 arch (4.x does not); vllm 0.24 supports it + Gemma-4.
    # Pinning these prevents `uv sync` from resolving back to transformers 4.x / vllm 0.14.
    "transformers>=5.13.0",
    "vllm>=0.24.0",
]
# NOTE: removed transformer-lens + fancy-einsum — unused by the bloom pipeline (only litellm is
# imported from the optional deps) and transformer-lens caps transformers <5, which was forcing
# the stale resolution. Re-add them in a separate group if the interpretability notebooks need them.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
